# ECS_GE_demo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
engine/ECS_GE/: CMakeLists.txt
engine/ECS_GE/src/: gl_Include.h
engine/ECS_GE/src/Client/: Client.cpp  Client.h
engine/ECS_GE/src/Components/: Atlas2D.cpp  Atlas2D.h  Collision.cpp  Collision.h  Collor.cpp  Collor.h  Cube.cpp  Cube.h  DisplayString.cpp  DisplayString.h  Health.cpp  Health.h  Image.cpp  Image.h  Move.cpp  Move.h  Position.cpp  Position.h  SkyBox.cpp  SkyBox.h  Sphere.cpp  Sphere.h  Sprite.cpp  Sprite.h
engine/ECS_GE/src/Engine/: Engine.cpp  Engine.h
engine/ECS_GE/src/Managers/: CameraManager.cpp  CameraManager.h  FileSystemManager.cpp  FileSystemManager.h  FontManager.cpp  FontManager.h  InputManager.cpp  InputManager.h  LightManager.cpp  LightManager.h  ResourceManager.cpp  ResourceManager.h  ServiceLocator.cpp  ServiceLocator.h  WidgetsManager.cpp  WidgetsManager.h
engine/ECS_GE/src/Premitives/: Animator.cpp  Animator.h  FunctionWrapper.h  Point.h  Rect.h  Shape.cpp  Shape.h  Timer.h  Vector.h
engine/ECS_GE/src/Premitives/Render/: FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ShaderProgram.cpp  ShaderProgram.h  VertexArray.cpp  VertexBuffer.h  VertexBufferLayout.cpp  texture2D.cpp  texture2D.h  texture3D.cpp  texture3D.h
engine/ECS_GE/src/Systems/: CollisionSystem.cpp  CollisionSystem.h  ISystem.h  ImGuiController.cpp  ImGuiController.h  LogSystem.cpp  LogSystem.h  MoveSystem.cpp  MoveSystem.h  RenderSystem.cpp  RenderSystem.h  ThreadPool.cpp  ThreadPool.h  UpdateSystem.cpp  UpdateSystem.h
engine/ECS_GE/src/Widgets/: GlobalWidget.cpp  GlobalWidget.h  Widget.cpp  Widget.h  WidgetContainer.cpp  WidgetContainer.h
res/: res.json
res/atlas/: _AttackNoMovement.json
res/shaders/: fAssimpObject.glsl  fDefault3D.glsl  fDefault3D.txt  fFreeType.glsl  fFreeType.txt  fImage.txt  fLight3D.txt  fPostProcessing.glsl  fSprite.txt  fragment.txt  vAssimpObject.glsl  vDefault3D.txt  vFreeType.glsl  vFreeType.txt  vImage.txt  vLight3D.glsl  vSkyBox.glsl  vSprite.txt  vertex.glsl  vertex.txt
res/sprites/Humans/: Kinght.sprite
res/sprites/Humans/Knight_/: _Attack.json  _Attack2.json  _AttackCombo.json  _Death.json  _Fall.json  _Jump.json  _Roll.json  _Run.json  _SlideAll.json
res/sprites/Knight/Colour2/Outline/120x80_PNGSheets/: _Attack.json
res/sprites/test/: Kinght.sprite  _Attack.json  _Attack.sprite  _Idle.json
src/: Client.cpp  Client.h  main.cpp
src/Client/: Client.cpp
src/Components/: Atlas2D.cpp  Atlas2D.h  Collision.cpp  Collision.h  Collor.cpp  Collor.h  DisplayString.cpp  DisplayString.h  Health.h  IComponent.h  Image.cpp  Image.h  Move.h  Position.cpp  Position.h  Size.cpp  Size.h  Sprite.cpp  Sprite.h
src/Engine/: Engine.cpp  Engine.h
src/Entities/: Board.cpp  Board.h  Button.cpp  Button.h  GameObject.cpp  GameObject.h  Knight.cpp  Knight.h
src/Managers/: CameraManager.cpp  CameraManager.h  FontManager.cpp  FontManager.h  InputManager.cpp  ResourceManager.cpp  ResourceManager.h
src/Premitives/: Animator.h  Point.h  Rect.h  Shape.cpp  Shape.h  Timer.cpp  Vector.h
src/Premitives/Render/: IndexBuffer.h  ShaderProgram.cpp  ShaderProgram.h  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  texture2D.cpp  texture2D.h
src/Systems/: CollisionSystem.cpp  CollisionSystem.h  DemoServiceLocator.cpp  DemoServiceLocator.h  MoveSystem.cpp  MoveSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  UpdateSystem.cpp  UpdateSystem.h
src/Windows/: MainMenuWindow.cpp  MainMenuWindow.h  SandboxWindow.cpp  SandboxWindow.h
